crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_basic_encrypt_raw_aes128.snap
---
source: crates/embucket-functions/src/tests/encryption/encrypt_raw.rs
description: "\"SELECT ENCRYPT_RAW(\n        TO_BINARY('426F6E6A6F7572', 'HEX'),  -- 'Bonjour' in hex\n        TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 16-byte key\n        TO_BINARY('416C736F4E6F745365637265', 'HEX')  -- 12-byte IV (24 hex chars)\n    ) AS encrypted\""
---
Ok(
    [
        "+----------------------------------------------------------------------------------------------------------+",
        "| encrypted                                                                                                |",
        "+----------------------------------------------------------------------------------------------------------+",
        "| {\"ciphertext\":\"B20400D9450F42\",\"iv\":\"416C736F4E6F745365637265\",\"tag\":\"251FD0FE7E206116A14FC65AFEEC5903\"} |",
        "+----------------------------------------------------------------------------------------------------------+",
    ],
)
