crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_decrypt_raw_invalid_key_length.snap
---
source: crates/embucket-functions/src/tests/encryption/decrypt_raw.rs
description: "\"SELECT DECRYPT_RAW(\n        TO_BINARY('DEADBEEF', 'HEX'),  -- dummy ciphertext\n        TO_BINARY('0123456789ABCDEF0123456789ABCDEF01', 'HEX'),  -- 17-byte key (invalid)\n        TO_BINARY('416C736F4E6F74536563726574', 'HEX'),  -- 12-byte IV\n        TO_BINARY('', 'HEX'),  -- empty AAD\n        'AES-GCM',\n        TO_BINARY('00112233445566778899AABBCCDDEEFF', 'HEX')  -- dummy tag\n    ) AS decrypted\""
---
Err(
    "Error: Execution error: Invalid key length 17. Supported lengths: 16, 24, 32 bytes",
)
