crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_decrypt_raw_unsupported_method.snap
---
source: crates/embucket-functions/src/tests/encryption/decrypt_raw.rs
description: "\"SELECT DECRYPT_RAW(\n        TO_BINARY('DEADBEEF', 'HEX'),  -- dummy ciphertext\n        TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 16-byte key\n        TO_BINARY('416C736F4E6F745365637265', 'HEX'),  -- 12-byte IV (24 hex chars)\n        TO_BINARY('', 'HEX'),  -- empty AAD\n        'AES-CBC',  -- unsupported method\n        TO_BINARY('00112233445566778899AABBCCDDEEFF', 'HEX')  -- dummy tag\n    ) AS decrypted\""
---
Err(
    "Error: Execution error: Unsupported encryption mode: CBC",
)
