crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_encrypt_raw_longer_data.snap
---
source: crates/embucket-functions/src/tests/encryption/encrypt_raw.rs
description: "\"SELECT ENCRYPT_RAW(\n        TO_BINARY('48656C6C6F20576F726C642120546869732069732061206C6F6E6765722074657374206D6573736167652E', 'HEX'),  -- 'Hello World! This is a longer test message.'\n        TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 16-byte key\n        TO_BINARY('416C736F4E6F745365637265', 'HEX')  -- 12-byte IV (24 hex chars)\n    ) AS encrypted\""
---
Ok(
    [
        "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+",
        "| encrypted                                                                                                                                                                        |",
        "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+",
        "| {\"ciphertext\":\"B80E02DF455A6724B68D8B32A1707F9140A1714EAD2D0C0936505655B5E4B0C4622259C4C83CDA20572862\",\"iv\":\"416C736F4E6F745365637265\",\"tag\":\"94C78E3E6A40926A628235FE5D76E055\"} |",
        "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
