crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_encrypt_raw_short_iv.snap
---
source: crates/embucket-functions/src/tests/encryption/encrypt_raw.rs
description: "\"SELECT ENCRYPT_RAW(\n        TO_BINARY('426F6E6A6F7572', 'HEX'),  -- 'Bonjour' in hex\n        TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 16-byte key\n        TO_BINARY('416C736F4E6F7453', 'HEX')  -- 8-byte IV (too short for GCM)\n    ) AS encrypted\""
---
Err(
    "Error: Execution error: IV/Nonce of size 64 bits needs to be of size of 96 bits for encryption mode GCM",
)
